Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-7486

Inconsistent state information in health_check

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.9.0
    • Lustre 2.8.0
    • lola
      build:2.7.63-4-gf84e06e, a7eface85ea2d2aa6198681264b082a0244855d4
    • 3
    • 9223372036854775807

      The error occurred during soak testing of build '20151122' (see https://wiki.hpdd.intel.com/pages/viewpage.action?title=Soak+Testing+on+Lola&spaceKey=Releases#SoakTestingonLola-20151122).

      If a Lustre client hit a LBUG (for example LU-7422) the state information found in /proc/fs/lustre/health_check is inconsistent and confusing:

      [root@lola-29 ~]# cat /proc/fs/lustre/health_check
      LBUG
      healthy
      

      It would be desired to remove the string 'health' or replace it with 'insane' or an equivalent string, mostly to provide meaningful messages to monitoring tools.

            bfaccini Bruno Faccini (Inactive)
            heckes Frank Heckes (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: